fix es mapping PROVENANCE